--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,11 +2,11 @@
 # 数据源配置，请修改为你项目的实际配置
 
 #解决数据库乱码问题
-spring.datasource.url=jdbc:mysql://39.105.200.26/test?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://39.105.200.26/zhaopin-dev?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 
-#spring.datasource.url=jdbc:mysql://localhost/test?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull //
+spring.datasource.url=jdbc:mysql://39.105.200.26/test?useSSL=false&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
