--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,8 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+#Redis数据库连接配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.timeout=1000
+
